tests/shouldFail/j058e.c
int x, y;
double *p = (double*)&x;
int main(void){
	return 0;
}
